--- a/UI/index.html
+++ b/UI/index.html
@@ -29,6 +29,7 @@
 					<div id="main">
 
 							<article id="connect" class="panel ">
+                <div style="display: none; text-align: center;" id="update_text"><a href="" id="update_url" target="_blank">A new version is available. Click here to download</a></div>
 								<header><h1>Select Serial Port</h1></header>
 								Available Ports:<br />
 								<span id="serialDetectError"></span>
