--- a/UI/index.html
+++ b/UI/index.html
@@ -163,7 +163,9 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Josh Stewart.</li><li>Details: <a href="http://speeduino.com">Speeduino</a></li>
+              <li>&copy; Josh Stewart.</li>
+              <li>Details: <a href="http://speeduino.com">Speeduino</a></li>
+              <li>Version: <span id="versionSpan"></span></li>
 						</ul>
 					</div>
 
