--- a/UI/index.html
+++ b/UI/index.html
@@ -20,9 +20,9 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#connect" class="icon fa-plug" onClick="disableRPM()"><span>Connect</span></a>
-						<a id="link_live" class="icon fa-tachometer" onClick="enableRPM()"><span>Dashboard</span></a>
-						<a id="link_config" class="icon fa-sliders-h" onClick="disableRPM()"><span>Config</span></a>
+						<a href="#connect" class="icon fa-plug"><span>Connect</span></a>
+						<a id="link_live" class="icon fa-tachometer"><span>Dashboard</span></a>
+						<a id="link_config" class="icon fa-sliders-h"><span>Config</span></a>
 					</nav>
 
 				<!-- Main -->
