Open links in external browser

--- a/UI/index.html
+++ b/UI/index.html
@@ -164,7 +164,7 @@
 					<div id="footer">
 						<ul class="copyright">
               <li>&copy; Josh Stewart.</li>
-              <li>Details: <a href="http://speeduino.com">Speeduino</a></li>
+              <li>Details: <a href="https://speeduino.com" target="_blank">Speeduino</a></li>
               <li>Version: <span id="versionSpan"></span></li>
 						</ul>
 					</div>
