Prevent patternlist from sending multiple request simultaneously

--- a/UI/index.html
+++ b/UI/index.html
@@ -106,7 +106,7 @@
 									<div class="row">
 										<div class="col-6 col-4-medium col-12-small">Simulated Pattern: </div>
 										<div class="col-1 col-6-medium col-12-small tooltip">
-											<select id="patternSelect" onChange="updatePattern()">
+											<select id="patternSelect" onChange="updatePatternQueue()">
 											</select>
                     </div>
                   </div>
