Add checkmark to save button

--- a/UI/index.html
+++ b/UI/index.html
@@ -82,7 +82,7 @@
 					</div>
                     <div>
                       <br />
-                      <center><input type='button' value="Save Config" id="btnSave" onclick="saveData();" /></center>
+                      <center><input type='button' value="Save Config" id="btnSave" onclick="saveData(true);" /><div id="saveCheck" class="icon fa-check fadeOut" style="visibility:hidden; display:inline-block;margin-left: 0.75em;"></div></center>
                     </div>
                   </div>
                   
