--- a/UI/index.html
+++ b/UI/index.html
@@ -61,23 +61,23 @@
                     <div class="row">
                       <div class="col-5">Fixed RPM: </div>
                       <div class="col-1">
-                        <input type="number" id="fixedRPM" min="0" max="10000" step="1" value="2500" onChange="setFixedRPM()" disabled>
+                        <input type="number" id="fixedRPM" min="0" max="10000" step="1" value="2500" onChange="sendConfig()" disabled>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-5">RPM Sweep range: </div>
                       <div class="col-3">
-                        <input type="number" id="rpmSweepMin" min="0" max="10000" step="1" value="100" onChange="setSweepRPM()" disabled>
+                        <input type="number" id="rpmSweepMin" min="0" max="10000" step="1" value="100" onChange="sendConfig()" disabled>
                       </div>
                       
                       <div class="col-2">
-                        <input type="number" id="rpmSweepMax" min="0" max="10000" step="1" value="6000" onChange="setSweepRPM()" disabled>
+                        <input type="number" id="rpmSweepMax" min="0" max="10000" step="1" value="6000" onChange="sendConfig()" disabled>
                       </div>
                     </div>
 					<div class="row">
 						<div class="col-5">RPM Sweep speed: </div>
 						<div class="col-2">
-							<input type="range" id="rpmSweepSpeed" min="200" max="4000" step="10" value="3000" onChange="setSweepRPM()" disabled>
+							<input type="range" id="rpmSweepSpeed" min="200" max="4000" step="10" value="3000" onChange="sendConfig()" disabled>
 						</div>
 					</div>
 					<div class="row">
@@ -101,6 +101,12 @@
 						<div class="col-7">Compression RPM: </div>
 						<div class="col-2">
 							<input type="number" id="compressionRPM" min="20" max="1000" step="1" value="400" onChange="setCompressionRPM()" disabled>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-7">Offset (Deg): </div>
+						<div class="col-2">
+							<input type="number" id="compressionOffset" min="0" max="359" step="1" value="0" onChange="setCompressionRPM()" disabled>
 						</div>
 					</div>
 
@@ -131,7 +137,7 @@
 							<article id="config" class="panel">
 								<section>
 									<div class="row">
-                    <h3>Stim Configuration</h3>
+                    					<h3>Stim Configuration</h3>
 									</div>
 									<div class="row">
 										<div class="col-6 col-4-medium col-12-small">Simulated Pattern: </div>
