Move to Font-Awesome 6
Lots of old file cleanup. Some small UI improvements

--- a/UI/index.html
+++ b/UI/index.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#connect" class="icon fa-plug"><span>Connect</span></a>
-						<a id="link_live" class="icon fa-tachometer"><span>Dashboard</span></a>
+						<a id="link_live" class="icon fa-gauge"><span>Dashboard</span></a>
 						<a id="link_config" class="icon fa-sliders-h"><span>Config</span></a>
 					</nav>
 
@@ -29,7 +29,7 @@
 					<div id="main">
 
 					<article id="connect" class="panel ">
-                		<div style="display: none; text-align: center; padding-bottom: 15px; text-decoration: underline;" id="update_text"><a href="" id="update_url" target="_blank" class="icon fa-arrow-up-from-bracket"> A new version is available. Click here to download</a></div>
+                		<div style="display: none; text-align: center; padding-bottom: 15px; text-decoration: underline;" id="update_text"><a href="" id="update_url" target="_blank" class="icon fa-solid fa-cloud-arrow-up"> A new version is available. Click here to download</a></div>
 						<header><h1>Select Serial Port</h1></header>
 						Available Ports:<br />
 						<span id="serialDetectError"></span>
