ID Arduino Nano in the port list

--- a/UI/index.html
+++ b/UI/index.html
@@ -33,7 +33,7 @@
 						<header><h1>Select Serial Port</h1></header>
 						Available Ports:<br />
 						<span id="serialDetectError"></span>
-						<select name="ports" class="select" id="portsSelect" size="10" style="width:250px"></select>
+						<select name="ports" class="select" id="portsSelect" size="10" width="25"></select>
 						<ul class="actions">
 							<li><input type='button' value="Refresh" onclick="refreshSerialPorts();" /></li>
 							<li><input type='button' value="Connect" id="btnConnect" onclick="openSerialPort();" /></li>
